Added anchor Alarm ToDo: implement Alarm listener on Signal K ToDo: Make blinking the anchor button on the bottom bar

--- a/ui/bottombar/AlarmsBar.ui
+++ b/ui/bottombar/AlarmsBar.ui
@@ -69,34 +69,7 @@
       <layout class="QVBoxLayout" name="verticalLayout_CN">
        <item>
         <layout class="QGridLayout" name="gridLayout_Alarms">
-         <item row="0" column="6">
-          <layout class="QHBoxLayout" name="horizontalLayout_Sinking">
-           <item>
-            <widget class="QToolButton" name="toolButton_Sinking">
-             <property name="text">
-              <string>Sinking</string>
-             </property>
-             <property name="icon">
-              <iconset>
-               <normaloff>:/resources/images/bottombar/alarm_sinking.png</normaloff>
-               <normalon>:/resources/images/bottombar/alarm_alarm.png</normalon>:/resources/images/bottombar/alarm_sinking.png</iconset>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>32</width>
-               <height>32</height>
-              </size>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-             <property name="toolButtonStyle">
-              <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
+         
          <item row="0" column="1">
           <layout class="QHBoxLayout" name="horizontalLayout_Abandon">
            <item>
@@ -108,34 +81,6 @@
               <iconset>
                <normaloff>:/resources/images/bottombar/alarm_abandon.png</normaloff>
                <normalon>:/resources/images/bottombar/alarm_alarm.png</normalon>:/resources/images/bottombar/alarm_abandon.png</iconset>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>32</width>
-               <height>32</height>
-              </size>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-             <property name="toolButtonStyle">
-              <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="0" column="3">
-          <layout class="QHBoxLayout" name="horizontalLayout_Fire">
-           <item>
-            <widget class="QToolButton" name="toolButton_Fire">
-             <property name="text">
-              <string>Fire</string>
-             </property>
-             <property name="icon">
-              <iconset>
-               <normaloff>:/resources/images/bottombar/alarm_fire.png</normaloff>
-               <normalon>:/resources/images/bottombar/alarm_alarm.png</normalon>:/resources/images/bottombar/alarm_fire.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -181,7 +126,63 @@
            </item>
           </layout>
          </item>
+         <item row="0" column="3">
+          <layout class="QHBoxLayout" name="horizontalLayout_Adrift">
+           <item>
+            <widget class="QToolButton" name="toolButton_Anchor">
+             <property name="text">
+              <string>Anchor</string>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>:/resources/images/bottombar/alarm_anchor.png</normaloff>
+               <normalon>:/resources/images/bottombar/alarm_anchor.png</normalon>:/resources/images/bottombar/alarm_anchor.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="toolButtonStyle">
+              <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
          <item row="0" column="4">
+          <layout class="QHBoxLayout" name="horizontalLayout_Fire">
+           <item>
+            <widget class="QToolButton" name="toolButton_Fire">
+             <property name="text">
+              <string>Fire</string>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>:/resources/images/bottombar/alarm_fire.png</normaloff>
+               <normalon>:/resources/images/bottombar/alarm_alarm.png</normalon>:/resources/images/bottombar/alarm_fire.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="toolButtonStyle">
+              <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="0" column="5">
           <layout class="QHBoxLayout" name="horizontalLayout_MOB">
            <item>
             <widget class="QToolButton" name="toolButton_MOB">
@@ -209,7 +210,7 @@
            </item>
           </layout>
          </item>
-         <item row="0" column="5">
+         <item row="0" column="6">
           <layout class="QHBoxLayout" name="horizontalLayout_Piracy">
            <item>
             <widget class="QToolButton" name="toolButton_Piracy">
@@ -220,6 +221,34 @@
               <iconset>
                <normaloff>:/resources/images/bottombar/alarm_piracy.png</normaloff>
                <normalon>:/resources/images/bottombar/alarm_alarm.png</normalon>:/resources/images/bottombar/alarm_piracy.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="toolButtonStyle">
+              <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="0" column="7">
+          <layout class="QHBoxLayout" name="horizontalLayout_Sinking">
+           <item>
+            <widget class="QToolButton" name="toolButton_Sinking">
+             <property name="text">
+              <string>Sinking</string>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>:/resources/images/bottombar/alarm_sinking.png</normaloff>
+               <normalon>:/resources/images/bottombar/alarm_alarm.png</normalon>:/resources/images/bottombar/alarm_sinking.png</iconset>
              </property>
              <property name="iconSize">
               <size>
